working on parsing to objects

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,8 +7,11 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
+                "-std=",
+                "c++11",
                 "${file}",
                 "-o",
+               
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
             "options": {
